--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,13 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 @layer base {
   :root {
     /* Our custom colors for light mode */
     /* --mainRed: 242 44 0; */
     --mainRed: 144 0 0;
-
+    --resultsPieceBackground: 244 244 244;
+    --resultsPieceBorder: 0 0 0;
 
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
@@ -43,8 +48,8 @@
   .dark {
     /* Our custom colors for dark mode  */
     --mainRed: 242 44 0;
-
-
+    --resultsPieceBackground: 244 244 244;
+    --resultsPieceBorder: 0 0 0;
 
 
     --background: 0 0% 3.9%;
