working on admin panel

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -90,3 +90,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+h1 {
+  @apply text-4xl font-bold font-poppins;
+}
+
+h2 {
+  @apply text-2xl font-semibold font-poppins;
+}
